Squashed commit of the following:
commit 134a90836606bb9496c313b2150de3483e0027c4
Author: itdevtrustpay3 <it_development3@trustpay.co.id>
Date:   Fri Aug 21 14:00:29 2026 +0700

    feat(free): add success title locator for registration confirmation page

commit c0aa96a802060b149e23d80c002e529fca244b13
Author: itdevtrustpay3 <it_development3@trustpay.co.id>
Date:   Fri Aug 21 13:39:22 2026 +0700

    feat(free): implement free ticket registration

commit d7ddf13ace0c0ca2c11fc4322021a56b6efe045b
Merge: b4e70aa 7b5ec52
Author: faris <faris@manjo.co.id>
Date:   Wed Aug 19 23:49:10 2026 +0700

    Merge branch 'feat/admin-pagination' into 'main'

    feat: add pagination feature for admin console lists

    See merge request company/partner/jive/ticketing!19
